[gd_scene load_steps=25 format=3 uid="uid://cfr73bq3klcr0"]

[ext_resource type="Script" path="res://Scripts/Enemies/ranger.gd" id="1_x6k5o"]
[ext_resource type="Texture2D" uid="uid://bf6n46d70bmae" path="res://Assets/GandalfHardcore Archer/GandalfHardcore Archer red sheet.png" id="2_r4fx4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vp0ud"]
atlas = ExtResource("2_r4fx4")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_krytk"]
atlas = ExtResource("2_r4fx4")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ph1p"]
atlas = ExtResource("2_r4fx4")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppjgq"]
atlas = ExtResource("2_r4fx4")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7k0g"]
atlas = ExtResource("2_r4fx4")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m86ur"]
atlas = ExtResource("2_r4fx4")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h6pw"]
atlas = ExtResource("2_r4fx4")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kggb"]
atlas = ExtResource("2_r4fx4")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23pnm"]
atlas = ExtResource("2_r4fx4")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyk1n"]
atlas = ExtResource("2_r4fx4")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sna0n"]
atlas = ExtResource("2_r4fx4")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usiby"]
atlas = ExtResource("2_r4fx4")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k3ou"]
atlas = ExtResource("2_r4fx4")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc5e6"]
atlas = ExtResource("2_r4fx4")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxb0u"]
atlas = ExtResource("2_r4fx4")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ipu"]
atlas = ExtResource("2_r4fx4")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko3t2"]
atlas = ExtResource("2_r4fx4")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic217"]
atlas = ExtResource("2_r4fx4")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfqea"]
atlas = ExtResource("2_r4fx4")
region = Rect2(448, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_w8qql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp0ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krytk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ph1p")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppjgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7k0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m86ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h6pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kggb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23pnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyk1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sna0n")
}],
"loop": false,
"name": &"Draw",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_usiby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k3ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc5e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxb0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ipu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko3t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic217")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfqea")
}],
"loop": true,
"name": &"Wander",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qqafu"]
height = 1.673

[sub_resource type="BoxShape3D" id="BoxShape3D_0a367"]
size = Vector3(4, 1, 3)

[node name="Ranger" type="CharacterBody3D" groups=["Enemies"]]
script = ExtResource("1_x6k5o")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(3.16, 0, 0, 0, 3.16, 0, 0, 0, 3.16, 0, 0.19, 0)
offset = Vector2(6.58, 0)
billboard = 2
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_w8qql")
animation = &"Wander"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qqafu")

[node name="ForwardRay" type="RayCast3D" parent="."]
target_position = Vector3(1.5, 0, 0)

[node name="DownRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.738537, 0, 0)

[node name="DetectionArea" type="Area3D" parent="."]
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
shape = SubResource("BoxShape3D_0a367")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
